--- a/index.html
+++ b/index.html
@@ -37,6 +37,20 @@
     ::-webkit-scrollbar-thumb:hover {
       background: #475569;
     }
+    /* Estado de carga */
+    #root:empty::before {
+      content: 'CARGANDO DASHBOARD...';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-family: 'Outfit', sans-serif;
+      font-weight: 800;
+      color: #3b82f6;
+      letter-spacing: 0.2em;
+      animation: pulse 1.5s infinite;
+    }
+    @keyframes pulse { 0%, 100% { opacity: 1; } 50% { opacity: 0.3; } }
   </style>
 <script type="importmap">
 {
@@ -57,6 +71,6 @@
 </head>
 <body>
   <div id="root"></div>
-  <script type="module" src="index.tsx"></script>
+  <script type="module" src="./index.tsx"></script>
 </body>
 </html>
