feat(cyclingai): Improve AI persona and error handling
Refines the system instructions for the CyclingAI to create more distinct and engaging personas for both the 'pcs' and 'encyclopedia' modes. Also, introduces error message display for a better user experience when API calls fail.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard Liga Frikis 2026 | Velogames</title>
-  <meta name="description" content="Clasificación y evolución de la liga privada de ciclismo Velogames 2026.">
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@400;600;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Outfit:wght@600;800&display=swap" rel="stylesheet">
   <style>
     :root { --slate-950: #020617; }
     body {
@@ -16,20 +15,9 @@
       margin: 0;
       -webkit-font-smoothing: antialiased;
     }
-    h1, h2, h3, .font-heading { font-family: 'Outfit', sans-serif; }
-    #root:empty::before {
-      content: 'INICIANDO SISTEMA...';
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-family: 'Outfit', sans-serif;
-      font-weight: 800;
-      color: #3b82f6;
-      letter-spacing: 0.2em;
-      animation: pulse 1.5s infinite;
-    }
-    @keyframes pulse { 0%, 100% { opacity: 1; } 50% { opacity: 0.3; } }
+    h1, h2, h3 { font-family: 'Outfit', sans-serif; }
+    .scrollbar-hide::-webkit-scrollbar { display: none; }
+    .scrollbar-hide { -ms-overflow-style: none; scrollbar-width: none; }
   </style>
 <script type="importmap">
 {
